# fastapi_supabase_template

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.staging  README.md  entrypoint.sh  sonar-project.properties
.devcontainer/: devcontainer.json  setup-gpg.sh
.github/: PRE_COMMIT_HOOKS.md  codespell-ignore.txt  dependabot.yml  gitleaks.toml
.github/workflows/: dependabot-auto.yml  main.yml  migrations.yml  sentry.yml  sonarcloud.yml
.ssh/: known_hosts
app/database/: pre_start.py
backend/: pyproject.toml  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 202405191_add_pgvector_rag_tables.py  70657e5a9e34_policies.py
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/v1/endpoints/: rag.py  storage.py  tasks.py
backend/app/core/: celery.py  config.py
backend/app/db/: pre_start.py
backend/app/db/migrations/versions/: 20250319_add_pgvector.py
backend/app/models/: __init__.py  base.py  file.py  item.py  profile.py  rag.py  storage.py  user.py
backend/app/services/: __init__.py  rag.py  storage.py  storage_service.py
backend/app/tasks/: __init__.py  rag.py
backend/app/utils/: init_data.py
backend/scripts/: activate_pgvector.sh  cloud-test.sh  entrypoint.sh  init_storage.py  install_sentry.py  migrate.py  pgmq_init.py  rollback.sh  rollback_pgmq.py  run_ci_tests.sh  run_tests_with_supabase.sh  update-dependencies.sh  verify_supabase.py
backend/tests/api/: test_rag.py  test_rag_workflow.py
backend/tests/models/: test_rag_models.py
backend/tests/services/: test_rag_service.py
docs/: CODING_STANDARDS.md  DEPLOYMENT_GUIDE.md  QUALITY_TOOLS.md  RAG.md  SECRETS_MANAGEMENT.md  SECURITY_CHECKS.md  SENTRY_DEPENDABOT_INTEGRATION.md  dependabot_configuration.md  sentry_integration.md
scripts/: activate_pgvector.sh
tests/: test_rag_system.py
